Fix overflow on mobile

--- a/client/src/components/FinderComponent.module.scss
+++ b/client/src/components/FinderComponent.module.scss
@@ -44,7 +44,7 @@
     background-color: hsla(127, 4%, 60%, 1);
   }
   .finderCardBody::-webkit-scrollbar {
-    width: 10px;
+    width: 15px;
     background-color: hsla(0, 0%, 100%, 0.6);
     @media only screen and (min-width: 900px) {
       width: 20px;
